stylesheet.css
.vertical-center {
    min-height: 100%;
    min-height: 100vh;
    display: flex;
    align-items: center;
  }

.navlink {
    width: fit-content;
    margin: 5px;
    padding: 5px 30px 10px 20px;
    transition: 0.5s;
}

.navlink:hover {
    background-color: black;
    color: white;
}

